[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Interface/MainMenu/MainBG.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/MainMenu.tres" type="Theme" id=3]
[ext_resource path="res://assets/UI/Options/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/MainMenu/About/About.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/MainMenu/Lobby/Lobby.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MainMenu" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="H" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -662.463
margin_right = -64.0
margin_bottom = -173.463
theme = ExtResource( 3 )

[node name="T" type="TabContainer" parent="H"]
margin_right = 1792.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
tabs_visible = false

[node name="Empty" type="Control" parent="H/T"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" parent="H/T" instance=ExtResource( 4 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
theme = null

[node name="About" parent="H/T" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Lobby" parent="H/T" instance=ExtResource( 6 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="V" type="VBoxContainer" parent="."]
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 100.0
margin_right = -120.0
margin_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )

[node name="bJoinServer" type="Button" parent="V"]
margin_right = 1680.0
margin_bottom = 22.0
text = "Join Server"

[node name="bLocalGame" type="Button" parent="V"]
margin_top = 26.0
margin_right = 1680.0
margin_bottom = 48.0
text = "Local Game"

[node name="bOptions" type="Button" parent="V"]
margin_top = 52.0
margin_right = 1680.0
margin_bottom = 74.0
text = "Options"

[node name="bAbout" type="Button" parent="V"]
margin_top = 78.0
margin_right = 1680.0
margin_bottom = 100.0
text = "About"

[node name="bQuit" type="Button" parent="V"]
margin_top = 104.0
margin_right = 1680.0
margin_bottom = 126.0
text = "Quit"
[connection signal="pressed" from="V/bJoinServer" to="." method="_on_bJoinServer_pressed"]
[connection signal="pressed" from="V/bLocalGame" to="." method="_on_bLocalGame_pressed"]
[connection signal="pressed" from="V/bOptions" to="." method="_on_bOptions_pressed"]
[connection signal="pressed" from="V/bAbout" to="." method="_on_bAbout_pressed"]
[connection signal="pressed" from="V/bQuit" to="." method="_on_bQuit_pressed"]
